--- a/src/main/resources/fxml/Gui.fxml
+++ b/src/main/resources/fxml/Gui.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="387.0" prefWidth="432.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="387.0" prefWidth="432.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ManageTodos">
    <children>
       <ListView id="lstTodos" fx:id="lstTodos" layoutX="17.0" layoutY="18.0" prefHeight="349.0" prefWidth="238.0" />
       <Button id="btnNew" fx:id="btnNew" layoutX="366.0" layoutY="342.0" mnemonicParsing="false" onAction="#addTodo" text="New" />
