--- a/src/main/resources/fxml/Gui.fxml
+++ b/src/main/resources/fxml/Gui.fxml
@@ -4,10 +4,11 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.Pane?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="387.0" prefWidth="432.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ManageTodos">
    <children>
       <ListView id="lstTodos" fx:id="lstTodos" layoutX="17.0" layoutY="18.0" prefHeight="349.0" prefWidth="238.0" />
-      <Button id="btnNew" fx:id="btnNew" layoutX="366.0" layoutY="342.0" mnemonicParsing="false" onAction="#addTodo" text="New" />
+      <Button id="btnNew" fx:id="btnNew" layoutX="274.0" layoutY="342.0" mnemonicParsing="false" onAction="#addTodo" prefHeight="25.0" prefWidth="137.0" text="New" />
+      <Button fx:id="editTodo" layoutX="352.0" layoutY="305.0" mnemonicParsing="false" onAction="#editTodo" prefHeight="25.0" prefWidth="59.0" text="Edit" />
+      <Button fx:id="deleteTodo" layoutX="274.0" layoutY="305.0" mnemonicParsing="false" onAction="#deleteTodo" prefHeight="25.0" prefWidth="59.0" text="Delete" />
    </children>
 </Pane>
